--- a/about_leokasuki.css
+++ b/about_leokasuki.css
@@ -37,7 +37,7 @@ body {
 
         .container_hobbies {
             width: 90%;
-            max-width: 700px;
+            max-width: 300px;
             height: 550px;
             background: #1a1a1a;
             padding: 40px;
@@ -79,6 +79,11 @@ body {
             margin-bottom: 20px;
         }
 
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
         .profile-img {
             width: 130px;
             height: 130px;
@@ -92,6 +97,7 @@ body {
         p {
             line-height: 1.6;
             font-size: 1.05rem;
+            text-align: center;
         }
 
         .socials {
