--- a/about_leokasuki.css
+++ b/about_leokasuki.css
@@ -22,7 +22,8 @@ body {
 .container_links,
 .container_hobbies,
 .container_gif,
-.container_about_me_wrapper {
+.container_about_me_wrapper,
+.update-log {
     background: rgba(56, 1, 70, 0.7);
     border-radius: 15px;
     animation: fadeIn 0.8s ease forwards;
@@ -55,6 +56,15 @@ body {
     background: transparent;
     padding: 0;
     margin: 0;
+}
+
+.update-log {
+    width: 95%;
+    max-width: 820px;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    background: rgba(56, 1, 70, 0.7);
 }
 
 .container_links {
@@ -97,14 +107,11 @@ body {
     gap: 20px;
 }
 
-.about-links-wrapper {
+.about-me-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
-    width: 100%;
-    max-width: 700px;
-    margin-bottom: 400px;
+    gap: 20px;
 }
 
 .hobbies-list {
