--- a/about_leokasuki.css
+++ b/about_leokasuki.css
@@ -14,9 +14,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    overflow: hidden; 
-    width: 100vw; 
-    height: 1080px;
+    width: 100%; 
 }
 
 /* ----- Common box components ----- */
@@ -212,4 +210,37 @@ p {
     position: relative;
     margin-left: 10px;
     z-index: 1;
+}
+
+.desktop {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.mobile {
+  display: none;
+  background: orange;
+  color: white;
+  padding: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 15px; 
+}
+
+@media (max-width: 768px) {
+  .desktop {
+    display: none;
+  }
+
+  .mobile {
+    display: block;
+  }
 }
