--- a/about_leokasuki.css
+++ b/about_leokasuki.css
@@ -15,6 +15,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     width: 100%; 
+    height: 100%;
 }
 
 /* ----- Common box components ----- */
@@ -37,10 +38,8 @@ body {
 
 /* ----- Container ----- */
 .container_pfp {
-    width: 90%;
-    max-width: 200px;
+    width: 200px;
     padding: 40px;
-    margin-right: 12px;
 }
 
 .container_about_me_wrapper {
@@ -60,28 +59,24 @@ body {
 }
 
 .update-log {
-    width: 95%;
-    max-width: 820px;
+    width: 90%;
+    max-width: 700px;
+    padding: 40px;
     background: transparent;
-    padding: 0;
     margin: 0;
     background: rgba(56, 1, 70, 0.7);
 }
 
 .container_links {
-    width: 90%;
-    max-width: 203px;
+    width: 200px;
     padding: 40px;
     text-align: center;
-    margin-right: 12px;
 }
 
 .container_hobbies {
     width: 90%;
     max-width: 300px;
     padding: 40px;
-    margin-bottom: 210px;
-    margin-left: 10px;
 }
 
 .container_gif {
@@ -105,18 +100,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    position: relative;
-    display: flex;
-    align-items: flex-start;
-    
+    gap: 40px;
 }
 
 .about-me-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
 }
 
 .hobbies-list {
@@ -125,7 +116,6 @@ body {
 }
 
 .hobby {
-    margin: 10px 0;
     cursor: pointer;
 }
 
@@ -187,8 +177,8 @@ p {
     overflow: hidden;
     border-radius: 10px;
     position: relative;
-    margin-left: 10px;
     z-index: 1;
+    margin-right: -20px;
 }
 
 .scroll-content {
@@ -208,8 +198,8 @@ p {
     overflow: hidden;
     border-radius: 10px;
     position: relative;
-    margin-left: 10px;
     z-index: 1;
+    margin: 0;
 }
 
 .desktop {
@@ -217,7 +207,7 @@ p {
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    gap: 20px;
+    gap: 40px;
 }
 
 .mobile {
@@ -243,4 +233,31 @@ p {
   .mobile {
     display: block;
   }
+}
+
+#taskbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40px;
+  background: #300036;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #404040;
+  display: flex;
+  align-items: center;
+  z-index: 9999;
+padding: 0 10px;
+}
+
+#start-button {
+    width: 70px;
+    height: 100%;
+  margin: 0 0 0 -15px;
+  background: #650072;
+  border: hidden;
+}
+
+.tux_with_gun {
+    margin-left: -15px;
 }
