--- a/subpages/subpage_setup_pc_compenents/setup_pc_compenents.css
+++ b/subpages/subpage_setup_pc_compenents/setup_pc_compenents.css
@@ -6,23 +6,26 @@ body {
     color: white;
     justify-content: center;
     align-items: flex-start;
-    background-image: url("about_me_images/Wallpaper background from yume nikki.png");
+    background-image: url("setup_pc_compenents_images/half\ life\ background.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    min-width: 1300px;
-    overflow: hidden;
+    height: 1800px;
 }
 
 .container {
     width: 90%;
-    max-width: 700px;
-    background: #1a1a1a;
+    max-width: 1300px;
+    height: 680px;
     padding: 40px;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0,0,0,0.4);
     animation: fadeIn 0.8s ease forwards;
-    opacity: 0;
+    background: rgba(238, 98, 5, 0.4);
+}
+
+.setup-container {
+  bottom: 300px;
 }
 
 @keyframes fadeIn {
@@ -32,7 +35,6 @@ body {
 
 h1 {
     text-align: center;
-    margin-bottom: 20px;
 }
 
 p {
@@ -40,13 +42,65 @@ p {
     font-size: 1.05rem;
 }
 
+.slides {
+width: 97%;
+height: 500px;
+background: rgba(212, 164, 3, 0.5);
+border-radius: 12px;
+padding: 20px;
+margin-top: 20px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+
+.slide {
+display: none;
+font-size: 1.3rem;
+}
+
+
+.slide.active {
+display: block;
+}
+
+
+/* Navigation */
+.navigation {
+display: flex;
+justify-content: center;
+gap: 20px;
+margin-top: 85px;
+}
+
+
+.navigation button {
+background: #650072;
+color: white;
+border: none;
+padding: 10px 20px;
+border-radius: 10px;
+font-size: 1.2rem;
+cursor: pointer;
+}
+
+
+.navigation button:hover {
+background: #7f0090;
+}
+.indicator-container { display: flex; justify-content: center; gap: 8px; margin-top: 10px; }
+.indicator { width: 10px; height: 10px; background: #4a004f; border-radius: 50%; transition: 0.3s; }
+.indicator.active { width: 18px; height: 18px; background: #ff4dff; }
+
 .desktop {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 40px;
-    height: 1300px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 100px;
+    height: 1600px;
 }
 
 .mobile {
