--- a/subpages/subpage_setup_pc_compenents/setup_pc_compenents.css
+++ b/subpages/subpage_setup_pc_compenents/setup_pc_compenents.css
@@ -11,6 +11,9 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     height: 1800px;
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .container {
@@ -35,11 +38,13 @@ body {
 
 h1 {
     text-align: center;
+    font-family: 'Lucida Console', monospace;
 }
 
 p {
     line-height: 1.6;
     font-size: 1.05rem;
+    font-family: 'Lucida Console', monospace;
 }
 
 .slides {
@@ -101,6 +106,7 @@ background: #7f0090;
     align-items: center;
     gap: 100px;
     height: 1600px;
+    font-family: 'Lucida Console', monospace;
 }
 
 .mobile {
@@ -116,6 +122,7 @@ background: #7f0090;
   width: 90%;
   max-width: 400px;
   border-radius: 15px; 
+  font-family: 'Lucida Console', monospace;
 }
 
 @media (max-width: 768px) {
@@ -167,4 +174,47 @@ background: #7f0090;
     display: inline-block;
     box-sizing: border-box;
     line-height: 10px;
+}
+
+.slide-gif {
+  right: 20px;
+  top: 20px;
+}
+
+.kirby {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 80px;
+    animation: fly-diagonal-kirby 16s linear infinite;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fly-diagonal-kirby {
+    0% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+    100% {
+        transform: translate(490vw, -490vh) rotate(720deg);
+    }
+}
+
+.tenna {
+  position: fixed;
+    bottom: 0px;
+    right: 500px;
+    width: 80px;
+    animation: fly-diagonal-tenna 26s linear infinite;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fly-diagonal-tenna {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(-290vw, -290vh);
+    }
 }
