--- a/about_leokasuki.css
+++ b/about_leokasuki.css
@@ -5,7 +5,7 @@ body {
     padding: 120px 0 0 0;
     font-family: Arial, sans-serif;
     background: #0f0f0f;
-    color: rgb(255, 94, 0);
+    color: rgb(115, 167, 245);
     justify-content: center;
     align-items: flex-start;
     background-image: url("about_me_images/Wallpaper background from yume nikki.png");
@@ -27,7 +27,8 @@ body {
 .container_hobbies,
 .container_gif,
 .container_about_me_wrapper,
-.update-log {
+.update-log,
+.container_cover {
     background: rgba(56, 1, 70, 0.7);
     border-radius: 15px;
     animation: fadeIn 0.8s ease forwards;
@@ -39,6 +40,24 @@ body {
 }
 
 /* ----- Container ----- */
+
+.container_cover {
+    position: absolute;
+    top: -100px;
+    left: 40%;
+    transform: translateX(-50%);
+    width: 90%;
+    max-width: 700px;
+    z-index: 5;
+}
+
+.container_cover img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    display: block;
+}
+
 .container_pfp {
     width: 200px;
     padding: 40px;
@@ -130,6 +149,7 @@ body {
 
 .hobbies-list .title {
     font-weight: bold;
+    text-decoration: underline;
 }
 
 /* ----- Typography ----- */
